--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ body, html {
   height: 100%;
   margin: 0;
 }
-​
+
 .bgimg {
-  background-image: url('forestbridge.jpg');
+  background-image: url('/w3images/forestbridge.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
@@ -16,19 +16,19 @@ body, html {
   font-family: "Courier New", Courier, monospace;
   font-size: 25px;
 }
-​
+
 .topleft {
   position: absolute;
   top: 0;
   left: 16px;
 }
-​
+
 .bottomleft {
   position: absolute;
   bottom: 0;
   left: 16px;
 }
-​
+
 .middle {
   position: absolute;
   top: 50%;
@@ -36,26 +36,27 @@ body, html {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-​
+
 hr {
   margin: auto;
   width: 40%;
 }
 </style>
 <body>
-​
+
 <div class="bgimg">
   <div class="topleft">
     <p>Logo</p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
+    <hr>
+    <p>35 days left</p>
   </div>
   <div class="bottomleft">
-    <p>Stay tuned...</p>
+    <p>Some text</p>
   </div>
 </div>
-​
+
 </body>
 </html>
-​
