--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@ hr {
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
-    <hr>
-    <p>35 days left</p>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <p>Stay tuned...</p>
   </div>
 </div>
 
